<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".view.CrearRespuestas">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfR1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Respuesta_uno"
        app:helperText="@string/Altura"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:helperTextTextColor="@color/white"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:passwordToggleTint="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvResp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfR2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Respuesta_dos"
        app:helperText="@string/Peso"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:helperTextTextColor="@color/white"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfR1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvResp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfR3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Respuesta_tres"
        app:helperText="@string/Edad"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:helperTextTextColor="@color/white"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfR2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvResp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="213dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfR4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Respuesta_cuatro"
        app:helperText="@string/PoderMortifero"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:helperTextTextColor="@color/white"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfR3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvResp4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="283dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfR5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Respuesta_cinco"
        app:helperText="@string/Velocidad"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:helperTextTextColor="@color/white"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfR4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvResp5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="353dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btGuardarCarta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/transparente"
        android:clickable="true"
        android:contentDescription="@string/imgbutton"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/bt_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btVolver"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/transparente"
        android:clickable="true"
        android:contentDescription="@string/imgbutton"
        android:focusable="true"
        android:src="@drawable/bt_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btGuardarCarta" />


</androidx.constraintlayout.widget.ConstraintLayout>