<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".view.CrearCarta">

    <ImageButton
        android:id="@+id/btPreguntasCarta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/transparente"
        android:clickable="true"
        android:contentDescription="@string/imgbutton"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/bt_preguntas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btCancelar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/transparente"
        android:clickable="true"
        android:contentDescription="@string/imgbutton"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/bt_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btPreguntasCarta" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreAnimal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/nombre_del_animal"
        android:inputType="text"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:counterTextColor="@color/white"
        app:helperText="@string/nombreAnimal"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:helperTextTextColor="@color/white"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleTint="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNomAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="32dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfUrlCarta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="180dp"
        android:hint="@string/url_de_la_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreAnimal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUrlCarta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfDescripcionCarta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        android:hint="@string/descripcionAnimal"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toTopOf="@+id/btCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfUrlCarta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieDescripcionCarta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:inputType="textMultiLine|textImeMultiLine"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparente"
        android:clickable="true"
        android:contentDescription="@string/imgbutton"
        android:focusable="true"
        android:src="@drawable/bt_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/tfUrlCarta"
        app:layout_constraintTop_toBottomOf="@+id/nombreAnimal" />


</androidx.constraintlayout.widget.ConstraintLayout>